--- a/praki.tex
+++ b/praki.tex
@@ -74,23 +74,36 @@ background to a data analytics company.
 \bigskip
 \begin{itemize}
 \item Realigned the architecture of Picarro's flagship product
-  Surveyor from a monolithic architecture to a horizontally scalable
-  micro-service architecture.
+  Surveyor from a monolithic mess to a horizontally scalable
+  micro-service architecture leading to shorter development and
+  test cycles, improved customer satisfaction.
 \item Introduced the team to cluster computing technology, Apache
   Spark and scalable databases, Crate.IO, enabling key R\&D
-  technology.
+  efforts.
 \item Defined a three-year technology roadmap culminating in a modern
   and efficient datacenter cluster managed by Apache Mesos.
-\item Addressed security concerns about sensitive customer data with a
-  cloud-based analytics workshop which is securely managed and fully
-  audited. The design is being implemented as part of Picarro's
-  Enterprise Readiness initiative.
+\item Defined and led Enterprise Readiness initiatives. Addressed
+  security concerns about sensitive customer data with a cloud-based
+  analytics workshop which is securely managed and fully
+  audited. Guided performance and scalability improvements.
+\item Defined and building a Windows to Linux strategy for Picarro
+  analyzers to enable better deployment (Docker), simplified
+  communication (HTTP2, Message bus) and ReactJS-based UI.
+\item Assisted various teams in the company with their technology
+  selection process, mentored new employees in software development
+  process. Grew awareness of software engineering best practices in
+  hardware and system-centric teams.
+\item Revamped PKI infrastructure with certificates provisioned from
+  LetsEncrypt.org. Every Picarro analyzer in the field is provisioned
+  individual X509 certificates enabling cryptographically secure
+  communication.
 \end{itemize}
 
 \bigskip\noindent Some hands-on contributions:
 \begin{itemize}
-\item Simplified and scalabale data lake built using Crate.IO for data
-  analytics.
+\item A Simple and scalabale data lake built using Crate.IO for data
+  analytics which enabled a time-critical analysis to be done on a
+  scale considered undoable.
 \item Survey Drive Simulator, a highly flexible and scalable tool
   which provides the capability to simulate any condition needed to
   test Surveyor and eliminates lengthy and expensive driving tests.
