Minor changes to names

--- a/praki.tex
+++ b/praki.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 13pt,line]{article}
+4q\documentclass[a4paper, 13pt,line]{article}
 
 \usepackage{xcolor,colortbl}
 \usepackage{tabularx}
@@ -273,6 +273,6 @@ responsibilities for all development teams of more than sixty engineers.
 \end{table}
 
 \noindent\textbf{Indian Institute of Technology}, Chennai, India \hfill \textbf{Master of Technology}\vspace{1mm}\\
-\textbf{University College of Engineering}, Bangalore, India \hfill \textbf{Bachelor of Engineering}\vspace{-1.5mm}\\%\vspace{-1mm}%
+\textbf{University Visvesvaraya College of Engineering}, Bengaluru, India \hfill \textbf{Bachelor of Engineering}\vspace{-1.5mm}\\%\vspace{-1mm}%
 
 \end{document}
