Remove blank page

--- a/praki.tex
+++ b/praki.tex
@@ -1,4 +1,4 @@
-4q\documentclass[a4paper, 13pt,line]{article}
+\documentclass[a4paper, 13pt,line]{article}
 
 \usepackage{xcolor,colortbl}
 \usepackage{tabularx}
@@ -13,7 +13,6 @@
 \definecolor{Gray}{gray}{0.95}
 
 \begin{document}
-
 \noindent
 \begin{tabular}[h]{lcr}
 & {\Huge \boldtf Praki Prakash} & \\
