Revised with RN

--- a/praki.tex
+++ b/praki.tex
@@ -15,9 +15,9 @@
 \begin{document}
 \noindent
 \begin{tabular}[h]{lcr}
-& {\Huge \boldtf Praki Prakash} & \\
+&{\Huge \boldtf Praki Prakash} & \\
 \\
-& \center{\Letter: \texttt{praki.prakash@gmail.com}} & \\
+& \center{\Letter: {praki.prakash@gmail.com}} & \\
 \\
 \\
 \raisebox{-1pt}\FilledHut\space San Carlos, CA 94070 & & \phone\space 650-200-5155\\
@@ -72,6 +72,9 @@ background to a data analytics company.
 
 \bigskip
 \begin{itemize}
+\item Designed and implemented a ReactNative Android app for gas leak
+  detection using a portable analyzer. Uses heatmap overlaid on Google
+  maps to aid user in finding and recording leak locations quickly.
 \item Realigned the architecture of Picarro's flagship product
   Surveyor from a monolithic mess to a horizontally scalable
   micro-service architecture leading to shorter development and
@@ -110,10 +113,11 @@ background to a data analytics company.
   ReactJS and deployed using Docker.
 \end{itemize}
 
-\noindent Skills: Apache Spark, Crate, Docker, ReactJS, D3, GDAL, Java, Python,
-Groovy
+\noindent Skills: Apache Spark, Crate, Docker, ReactJS, React Native,
+React Redux, React Saga, D3, GDAL, Java, Python, JavaScript, Groovy.
 
-\begin{table}[!ht]
+\newpage
+\begin{table}[!htbp]
 \begin{tabularx}{\textwidth}{lXr}
 {\large \boldtf Master Technologist, HP Inc, Sunnyvale, CA} & & Mar 2014 - Jan 2015\\
 \hline
@@ -131,16 +135,15 @@ scale beyond the current single-threaded approach.
 \bigskip
 \noindent Presented ESM performance study results at Protect 2014 conference.
 
-\bigskip
 \noindent Skills: Scalability, query parallelization, performance measurement
 and analysis, grrovy, R, Java
 
-\newpage
-\begin{table}[!ht]
+\begin{table}[!htbp]
 \begin{tabularx}{\textwidth}{lXr}
 {\large \boldtf Founder, GuidingWave Technology, San Carlos, CA} & &
 Jan 2010 - Dec 2013\\
-\hline\\
+\hline
+\Xcline{1-1}{1.5pt}\\
 \end{tabularx}
 \end{table}
 
