How the heck did this work before?

--- a/praki.tex
+++ b/praki.tex
@@ -15,9 +15,9 @@
 \begin{document}
 \noindent
 \begin{tabular}[h]{lcr}
-&{\Huge \boldtf Praki Prakash} & \\
+&{\Huge \textbf{Praki Prakash}} & \\
 \\
-& \center{\Letter: {praki.prakash@gmail.com}} & \\
+& {\Letter: {praki.prakash@gmail.com}} & \\
 \\
 \\
 \raisebox{-1pt}\FilledHut\space San Carlos, CA 94070 & & \phone\space 650-200-5155\\
@@ -27,8 +27,8 @@
 \rowcolor{Gray}&&\\
 \rowcolor{Gray}& CHIEF TECHNOLOGY OFFICER &\\
 \rowcolor{Gray}
-& System Architecture \raisebox{1pt}\bullet{} Technology
-Direction \raisebox{1pt}\bullet{} Software Development &\\
+& System Architecture \raisebox{1pt}\textbullet{} Technology
+Direction \raisebox{1pt}\textbullet{} Software Development &\\
 \rowcolor{Gray}&&\\
 \Xhline{1.5\arrayrulewidth}
 \end{tabular}
@@ -57,7 +57,7 @@ direction for evolution.
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Chief Architect, Picarro Inc, Santa Clara, CA} & & Jan
+{\large \textbf Chief Architect, Picarro Inc, Santa Clara, CA} & & Jan
 2015 - Present\\
 \hline
 \Xcline{1-1}{1.5pt}\\
@@ -119,7 +119,7 @@ React Redux, React Saga, D3, GDAL, Java, Python, JavaScript, Groovy.
 \newpage
 \begin{table}[!htbp]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Master Technologist, HP Inc, Sunnyvale, CA} & & Mar 2014 - Jan 2015\\
+{\large \textbf Master Technologist, HP Inc, Sunnyvale, CA} & & Mar 2014 - Jan 2015\\
 \hline
 \Xcline{1-1}{1.5pt}\\
 \end{tabularx}
@@ -140,7 +140,7 @@ and analysis, grrovy, R, Java
 
 \begin{table}[!htbp]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Founder, GuidingWave Technology, San Carlos, CA} & &
+{\large \textbf Founder, GuidingWave Technology, San Carlos, CA} & &
 Jan 2010 - Dec 2013\\
 \hline
 \Xcline{1-1}{1.5pt}\\
@@ -165,7 +165,7 @@ data structures, Wavelets
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Staff Engineer, VMware Inc, Palo Alto, CA} & &
+{\large \textbf Staff Engineer, VMware Inc, Palo Alto, CA} & &
 July 2005 - Dec 2010\\
 \hline
 \Xcline{1-1}{1.5pt}\\
@@ -195,7 +195,7 @@ July 2005 - Dec 2010\\
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Engineering Manager, Yahoo! \hspace{-1mm} Personals, Sunnyvale, CA} & &
+{\large Engineering Manager, Yahoo! \hspace{-1mm} Personals, Sunnyvale, CA} & &
 Nov 2004 - July 2005\\
 \hline
 \Xcline{1-1}{1.5pt}\\
@@ -220,7 +220,7 @@ search engine team of ten engineers.
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Founding Engineer, Westbridge Technologies, Inc., Mountain View, CA} & &
+{\large Founding Engineer, Westbridge Technologies, Inc., Mountain View, CA} & &
 Oct 2001 - Nov 2004\\
 \hline
 \Xcline{1-1}{1.5pt}\\
@@ -247,7 +247,7 @@ messaging product.
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \boldtf Sr. Director of Engineering, Arzoo, Inc., Fremont, CA} & &
+{\large Sr. Director of Engineering, Arzoo, Inc., Fremont, CA} & &
 Mar 2000 - July 2001\\
 \hline
 \Xcline{1-1}{1.5pt}\\
