Per feedback from SWMBO

--- a/praki.tex
+++ b/praki.tex
@@ -101,12 +101,14 @@ background to a data analytics company.
   communication.
 \end{itemize}
 
-\bigskip\noindent Some hands-on contributions:
+\bigskip\noindent Some of my hands-on contributions:
 \begin{itemize}
+\item Picarro App \textemdash Android app built with React Native,
+  Redux, Redux Saga and Bing maps.
 \item A Simple and scalabale data lake built using Crate.IO for data
   analytics which enabled a time-critical analysis to be done on a
   scale considered undoable.
-\item Survey Drive Simulator, a highly flexible and scalable tool
+\item Survey Drive Simulator - a highly flexible and scalable tool
   which provides the capability to simulate any condition needed to
   test Surveyor and eliminates lengthy and expensive driving tests.
 \item Surveyor Dashboard, a business metrics dashboard built using
