--- a/praki.tex
+++ b/praki.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 13pt,line]{article}
+\documentclass[a4paper, 14pt,line]{extarticle}
 
 \usepackage{xcolor,colortbl}
 \usepackage{tabularx}
@@ -10,25 +10,31 @@
 
 \usepackage[margin=0.5in]{geometry}
 
+%\usepackage[T1]{fontenc}
+%\renewcommand*\familydefault{\sfdefault}
+
+%\usepackage{fontspec}
 \definecolor{Gray}{gray}{0.95}
 
 \begin{document}
 \noindent
+
+%\setsansfont{Roboto Condensed}
+
 \begin{tabular}[h]{lcr}
 &{\Huge \textbf{Praki Prakash}} & \\
 \\
 & {\Letter: {praki.prakash@gmail.com}} & \\
 \\
 \\
-\raisebox{-1pt}\FilledHut\space San Carlos, CA 94070 & & \phone\space 650-200-5155\\
+\raisebox{-1pt}\FilledHut\space\small{San Carlos, CA 94070}& & \phone\space\small{650-200-5155}\\
 \\
 \Xhline{2.5\arrayrulewidth}
 \hline\hline\Xhline{1.5\arrayrulewidth}
 \rowcolor{Gray}&&\\
 \rowcolor{Gray}& CHIEF TECHNOLOGY OFFICER &\\
-\rowcolor{Gray}
-& System Architecture \raisebox{1pt}\textbullet{} Technology
-Direction \raisebox{1pt}\textbullet{} Software Development &\\
+\rowcolor{Gray}& \small{\textbullet{}\space{}System Architecture} \raisebox{1pt}\textbullet{} Technology Direction&\\
+\rowcolor{Gray}& \small{\raisebox{1pt}\textbullet{} Software Development} &\\
 \rowcolor{Gray}&&\\
 \Xhline{1.5\arrayrulewidth}
 \end{tabular}
@@ -37,11 +43,10 @@ Direction \raisebox{1pt}\textbullet{} Software Development &\\
 \noindent
 Entrepreneurial technologist, with more than two decades of experience
 in designing and building innovative products. With a passion for
-building simple and robust software to meet the needs of the users,
-combines a broad range of experience with a can-do
-attitude. Identifies technology options and makes engineering
-trade-offs that allow meeting immediate needs with a well-defined
-direction for evolution.
+building simple and robust software that delight users, combines a
+broad range of experience with a can-do attitude. Identifies
+technology options. Adept at making the right trade-offs enabling
+agility and building a strong foundation for long-term needs.
 \bigskip
 
 \begin{table}[!ht]
@@ -57,18 +62,46 @@ direction for evolution.
 
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
-{\large \textbf Chief Architect, Picarro Inc, Santa Clara, CA} & & Jan
-2015 - Present\\
+{\large \textbf CTO, EVVEMI Inc, Redwood City, CA} & & 2018 Apr - 2018 July
+ \\
 \hline
 \Xcline{1-1}{1.5pt}\\
 \end{tabularx}
 \end{table}
 \vspace{-15pt}
-\noindent As the Chief Architect of a pioneering technology company that is redefining the natural gas
-distribution industry, I steer the architecture of all software
-developed in the company and provide technology vision and direction
-needed to transform the company with a scientific instrumentation
-background to a data analytics company.
+\noindent CTO for a Beauty Startup focused on building a network of
+hair stylists. Responsbile for all technology, product development and
+DevOPs. Contributed strategically and tactically on transitioning to a
+funded startup.
+
+\bigskip
+\begin{itemize}
+
+\item Redesign database schema and API for simpler development and increased capabilities
+\item Design and implement video chat capabilities
+\item PoC of voice recognition with Google Voice
+\item Guide and mentor development team
+\item Manage AWS DevOPs
+\end{itemize}
+
+\noindent Skills: Java, Spring Boot, PostgreSQL, Angular, AWS (CloudFront, Beanstalk, RDS,
+S3), Twilio (Voice, SMS), Braintree
+
+\newpage
+\begin{table}[!ht]
+\begin{tabularx}{\textwidth}{lXr}
+{\large \textbf Chief Architect, Picarro Inc, Santa Clara, CA} & & Jan
+2015 - 2018 Mar\\
+\hline
+\Xcline{1-1}{1.5pt}\\
+\end{tabularx}
+\end{table}
+\vspace{-15pt}
+\noindent As the Chief Architect of a pioneering technology company
+that is redefining the natural gas distribution industry, I steer the
+architecture of all software developed in the company and provide
+technology vision and direction needed to transform the company with a
+scientific instrumentation background to a data analytics company.
 
 \bigskip
 \begin{itemize}
@@ -118,7 +151,6 @@ background to a data analytics company.
 \noindent Skills: Apache Spark, Crate, Docker, ReactJS, React Native,
 React Redux, React Saga, D3, GDAL, Java, Python, JavaScript, Groovy.
 
-\newpage
 \begin{table}[!htbp]
 \begin{tabularx}{\textwidth}{lXr}
 {\large \textbf Master Technologist, HP Inc, Sunnyvale, CA} & & Mar 2014 - Jan 2015\\
@@ -195,6 +227,7 @@ July 2005 - Dec 2010\\
   service to measure and monitor critical aspects of the service.
 \end{itemize}
 
+\newpage
 \begin{table}[!ht]
 \begin{tabularx}{\textwidth}{lXr}
 {\large Engineering Manager, Yahoo! \hspace{-1mm} Personals, Sunnyvale, CA} & &
@@ -217,7 +250,7 @@ search engine team of ten engineers.
   single point of failure and significantly improving the failure and
   disaster recovery aspects of the service.
 \item Delivered new features and improvements to profile matching
-  periodically.
+  in an agile setting.
 \end{itemize}
 
 \begin{table}[!ht]
